# funke

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
src/: audio.rs  bluetooth.rs  main.rs  tui.rs
